# qsbi.crud.sql

./: README.md  pyproject.toml
qsbi/crud/sql/: Makefile  __init__.py  account.py  account_type.py  audit_log.py  bank.py  base.py  category.py  currency.py  currency_link.py  deps.py  party.py  payment.py  payment_type.py  reconcile.py  scheduled.py  session.py  sub_category.py  transact.py  user.py
qsbi/crud/sql/_codegen/: codegen.py  config.py  module.py
qsbi/crud/sql/_codegen/templates/: crud_module.j2  currency.j2  id_and_name.j2  user.j2
