[tool.poetry]
name = "qsbi-crud-sql"
version = "0.2.0"
description = "CRUD module between API and sql backend"
authors = ["giacinti <philippe@giacinti.com>"]
readme = "README.md"
packages = [{include = "qsbi"}]

[tool.poetry.dependencies]
python = "^3.9"
qsbi-api = {path = "../qsbi.api", develop = true}
qsbi-backend-sql = {path = "../qsbi.backend.sql", develop = true}


[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
